--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/grr"
     android:orientation="vertical"
-    tools:context=".AuthActivity">
+    tools:context=".activities.AuthActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
