--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -40,20 +40,31 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="80dp"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/logo2_gaz" />
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="130dp"
+        <LinearLayout
+            android:layout_width="250dp"
             android:layout_height="match_parent"
-            android:layout_marginEnd="15dp"
             android:layout_weight="1"
-            android:src="@drawable/agv2" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                app:srcCompat="@drawable/agv2" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/photo_agv" />
+        </LinearLayout>
 
     </LinearLayout>
 
