--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                app:srcCompat="@drawable/agv2" />
+                app:srcCompat="@drawable/agv22" />
 
             <ImageView
                 android:id="@+id/imageView6"
@@ -94,6 +94,8 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
+        android:background="@color/white"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
