--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grr">#003549</color>
+    <color name="grr">#1C385A</color>
     <color name="br">#9B9A9A</color>
     <color name="bl">#03A9F4</color>
     <color name="brl">#CACACA</color>
