--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -40,7 +40,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="600dp"
         android:background="@color/brl"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="Qr code number:"
+                android:text="Qr code number/serial num:"
                 android:textColor="@color/black"
                 android:textSize="12dp" />
 
@@ -95,14 +95,14 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="Наименование оборудования:"
+                android:text="Описание:"
                 android:textColor="@color/black"
                 android:textSize="12dp" />
 
             <TextView
                 android:id="@+id/textViewNameTS"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="90dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:text="0"
@@ -112,30 +112,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bScanQR"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="50dp"
-        android:background="@drawable/design3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Cканировать qr код"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
