--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,11 @@
     <color name="purple_700">#304FFE</color>
     <color name="teal_200">#00BFA5</color>
     <color name="teal_700">#105E53</color>
+
+    <color name="picker_red">#D50000</color>
+    <color name="picker_green">#3AEF85</color>
+    <color name="picker_blue">#304FFE</color>
+    <color name="picker_black">#131313</color>
+    <color name="picker_yellow">#FFD600</color>
+    <color name="picker_orange">#FFAB00</color>
 </resources>
