--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -12,17 +12,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imWifi"
+            android:layout_width="30dp"
+            android:layout_marginTop="2dp"
+            android:layout_height="30dp"
+            android:paddingTop="3dp"
+            android:layout_marginStart="10dp"
+
+            android:background="@null"
+            app:srcCompat="@drawable/ic_wifi_red" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/butSetting"
+            android:layout_marginTop="5dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:background="@null"
             app:srcCompat="@drawable/ic_settings" />
+
+
     </LinearLayout>
 
 
@@ -104,7 +121,7 @@
     </androidx.cardview.widget.CardView>
 
     <EditText
-        android:id="@+id/user_login_auth"
+        android:id="@+id/userLoginAuth"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
@@ -121,7 +138,7 @@
         android:textColorHint="#9A9A9A" />
 
     <EditText
-        android:id="@+id/user_puss_auth"
+        android:id="@+id/userPussAuth"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
@@ -137,7 +154,7 @@
         android:textColorHint="#9A9A9A" />
 
     <Button
-        android:id="@+id/button_auth"
+        android:id="@+id/buttonAuth"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
@@ -151,7 +168,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/link_to_reg"
+        android:id="@+id/linkToReg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
