--- a/app/src/main/res/layout/item_agv.xml
+++ b/app/src/main/res/layout/item_agv.xml
@@ -24,7 +24,7 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/imDelete"
+                android:id="@+id/ibDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -32,7 +32,7 @@
                 android:background="@null"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_delete" />
+                app:srcCompat="@drawable/photo_ag77" />
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -41,7 +41,7 @@
                 android:orientation="vertical"
                 android:padding="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imDelete"
+                app:layout_constraintEnd_toStartOf="@+id/ibDelete"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
