--- a/app/src/main/res/layout/fragment_save_agv.xml
+++ b/app/src/main/res/layout/fragment_save_agv.xml
@@ -13,6 +13,7 @@
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:paddingStart="5dp"
         android:hint="Название AGV" />
 
     <EditText
@@ -23,22 +24,42 @@
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:paddingStart="5dp"
         android:hint="Серийный номер" />
 
     <EditText
-        android:id="@+id/etDescriptionAGV"
+        android:id="@+id/etVersionFW"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="15dp"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:inputType="textMultiLine"
-        android:gravity="top|start"
-        android:scrollbars="vertical"
-        android:lines="5"
-        android:maxLines="10"
-        android:hint="Описание" />
+        android:layout_height="30dp"
+        android:paddingStart="5dp"
+        android:hint="Версия FW" />
+
+    <EditText
+        android:id="@+id/etModelAgv"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:paddingStart="5dp"
+        android:hint="Модель AGV" />
+
+    <EditText
+        android:id="@+id/etePlan"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:paddingStart="5dp"
+        android:hint="ePlan" />
+
 
     <Button
         android:id="@+id/bSaveAgv"
