--- a/app/src/main/res/layout/item_agv_to.xml
+++ b/app/src/main/res/layout/item_agv_to.xml
@@ -64,7 +64,8 @@
                 android:layout_weight="1"
                 android:text="Text"
                 android:textColor="@color/black"
-                android:textSize="10dp" />
+                android:textSize="12dp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
