--- a/app/src/main/res/layout/item_agv.xml
+++ b/app/src/main/res/layout/item_agv.xml
@@ -220,22 +220,14 @@
                     android:id="@+id/imageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@null"
+                    android:layout_marginEnd="2dp"
                     android:layout_marginBottom="2dp"
+                    android:background="@null"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:srcCompat="@drawable/ic_list_agv_big" />
-
-                <ImageButton
-                    android:id="@+id/ibDeleteAgv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="72dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@null"
-                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
                     app:layout_constraintTop_toBottomOf="@+id/ibDelete"
-                    app:srcCompat="@drawable/ic_del_big" />
+                    app:layout_constraintVertical_bias="1.0"
+                    app:srcCompat="@drawable/ic_list_agv_big" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
