--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -217,7 +217,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/bDiagnosticAgv"
+            android:id="@+id/bToAgv"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="center"
