--- a/app/src/main/res/layout/item_agv.xml
+++ b/app/src/main/res/layout/item_agv.xml
@@ -217,7 +217,7 @@
                 </LinearLayout>
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/btnDelete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="2dp"
