--- a/app/src/main/res/layout/item_agv.xml
+++ b/app/src/main/res/layout/item_agv.xml
@@ -35,7 +35,7 @@
                     android:background="@null"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/photo_ag77" />
+                    app:srcCompat="@drawable/photo_agv_mini_2" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout"
