Refactor color item agv

--- a/app/src/main/res/layout/item_agv.xml
+++ b/app/src/main/res/layout/item_agv.xml
@@ -23,6 +23,8 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clItemAgv"
+                android:background="@color/red_light_item_agv_to_nok"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
