--- a/app/src/main/res/layout/activity_show_one_agv_to.xml
+++ b/app/src/main/res/layout/activity_show_one_agv_to.xml
@@ -213,16 +213,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="200dp"
         android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="5dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="10dp"
                     android:layout_gravity="center"
-                    android:layout_weight="1"
                     app:srcCompat="@drawable/photo_agv" />
 
     </LinearLayout>
