--- a/app/src/main/res/layout/activity_show_one_agv_to.xml
+++ b/app/src/main/res/layout/activity_show_one_agv_to.xml
@@ -39,7 +39,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="600dp"
         android:background="@color/white"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -215,14 +215,19 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/photo_agv" />
-
+        <Button
+            android:id="@+id/bToOneAgv"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="32dp"
+            android:backgroundTint="#0F89D5"
+            android:text="Техническое обслуживание AGV"
+            android:textColor="#FFFFFF"
+            android:textSize="15dp"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
 
