--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="green_light">#C0ECDD</color>
 
     <color name="red_light_item_agv_to_nok">#FFCCCC</color>
-    <color name="green_light_item_agv_to_no">#FFB9FBC2</color>
+    <color name="green_light_item_agv_to_no">#C5FFCD</color>
 
     <color name="picker_red">#D50000</color>
     <color name="picker_green">#3AEF85</color>
