--- a/app/src/main/res/layout/activity_make_agvto.xml
+++ b/app/src/main/res/layout/activity_make_agvto.xml
@@ -122,7 +122,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/bSaveDiagnostic"
+            android:id="@+id/bSaveDataToAgv"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -130,7 +130,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="32dp"
             android:backgroundTint="#0F89D5"
-            android:text="Сохранить диагностические данные"
+            android:text="Сохранить диагностические технического обслуживания"
             android:textColor="#FFFFFF"
             android:textSize="12dp"
             android:textStyle="bold" />
