--- a/app/src/main/res/layout/activity_show_one_agv_to.xml
+++ b/app/src/main/res/layout/activity_show_one_agv_to.xml
@@ -39,7 +39,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="650dp"
         android:background="@color/white"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -203,6 +203,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:background="@color/grr"
                 android:id="@+id/rcViewAgvToShow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
