--- a/app/src/main/res/layout/item_agv_to.xml
+++ b/app/src/main/res/layout/item_agv_to.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/llMainItemToAgv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -34,7 +34,7 @@
                 android:layout_weight="4"
                 android:text="TextView:"
                 android:textColor="@color/black"
-                android:textSize="12dp"
+                android:textSize="13dp"
                 android:textStyle="bold" />
 
             <TextView
