--- a/app/src/main/res/layout/activity_show_one_agv_to.xml
+++ b/app/src/main/res/layout/activity_show_one_agv_to.xml
@@ -141,7 +141,7 @@
                     android:layout_weight="2.5"
                     android:gravity="center"
                     android:paddingStart="2dp"
-                    android:text="Дата последнее обслуживание"
+                    android:text="Дата последнего обслуживания"
                     android:textColor="@color/black"
                     android:textSize="12dp"
                     android:textStyle="bold" />
@@ -158,7 +158,7 @@
                     android:layout_weight="2.5"
                     android:gravity="center"
                     android:paddingStart="2dp"
-                    android:text="Дата текущего обслуживание"
+                    android:text="Дата текущего обслуживания"
                     android:textColor="@color/black"
                     android:textSize="12dp"
                     android:textStyle="bold" />
