Initial commit sum, add before to, color orange, green, read

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,8 +15,9 @@
     <color name="red_light">#F38E8E</color>
     <color name="green_light">#C0ECDD</color>
 
-    <color name="red_light_item_agv_to_nok">#FFCCCC</color>
-    <color name="green_light_item_agv_to_no">#C5FFCD</color>
+    <color name="red_light_item_agv_to_nok">#FB9E9E</color>
+    <color name="green_light_item_agv_to_no">#95FDA3</color>
+    <color name="yellow_light_item_agv_before_to">#FB994E</color>
 
     <color name="picker_red">#D50000</color>
     <color name="picker_green">#3AEF85</color>
