--- a/app/src/main/res/layout/fragment_save_agv.xml
+++ b/app/src/main/res/layout/fragment_save_agv.xml
@@ -38,16 +38,15 @@
         android:hint="Версия FW"
         android:paddingStart="5dp" />
 
-    <EditText
-        android:id="@+id/etModelAgv"
+    <Spinner
+        android:id="@+id/spinnerModelAgv"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
-        android:background="@color/white"
-        android:hint="Модель AGV"
-        android:paddingStart="5dp" />
+        android:background="@color/white" />
+
 
     <EditText
         android:id="@+id/etePlan"
@@ -70,3 +69,16 @@
         android:backgroundTint="#0F89D5"
         android:text="Добавить AGV" />
 </LinearLayout>
+
+
+
+<!--<EditText-->
+<!--android:id="@+id/etModelAgv"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="30dp"-->
+<!--android:layout_marginStart="10dp"-->
+<!--android:layout_marginTop="10dp"-->
+<!--android:layout_marginEnd="15dp"-->
+<!--android:background="@color/white"-->
+<!--android:hint="Модель AGV"-->
+<!--android:paddingStart="5dp" />-->
