--- a/app/src/main/res/layout/fragment_agv.xml
+++ b/app/src/main/res/layout/fragment_agv.xml
@@ -5,8 +5,35 @@
     android:layout_height="match_parent"
     android:background="@color/grr">
 
+    <LinearLayout
+        android:id="@+id/lLLog"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" /> <!-- Spacer -->
+
+        <ImageButton
+            android:id="@+id/ibFilterAgv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="20dp"
+            android:background="@null"
+            android:src="@drawable/ic_filter_agv"
+            />
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcVewNote"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
