--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -42,8 +42,8 @@
         android:layout_height="25dp"
         android:layout_marginTop="5dp"
         android:orientation="horizontal"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="#21497A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -58,7 +58,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginEnd="20dp"
             android:background="@null"
-            app:srcCompat="@drawable/ic_admin_menu" />
+            app:srcCompat="@drawable/btn_admin_menu_selector" />
 
 
 
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
             android:background="@null"
-            app:srcCompat="@drawable/ic_log" />
+            app:srcCompat="@drawable/btn_log_selector" />
 
         <View
             android:layout_width="0dp"
