--- a/app/src/main/res/layout/fragment_agv.xml
+++ b/app/src/main/res/layout/fragment_agv.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,6 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" /> <!-- Spacer -->
 
+
+
         <ImageButton
             android:id="@+id/ibFilterAgv"
             android:layout_width="wrap_content"
@@ -26,7 +30,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginEnd="20dp"
             android:background="@null"
-            android:src="@drawable/ic_filter_agv"
+            android:src="@drawable/btn_filter_selector"
             />
 
     </LinearLayout>
