Refactor code, change color icon

--- a/app/src/main/res/drawable/ic_filter_agv_selector.xml
+++ b/app/src/main/res/drawable/ic_filter_agv_selector.xml
@@ -1,4 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="17dp" android:tint="#818181" android:viewportHeight="20" android:viewportWidth="24" android:width="21dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="17dp" android:tint="#FF6D00" android:viewportHeight="20" android:viewportWidth="24" android:width="21dp">
       
     <path android:fillColor="@android:color/white" android:pathData="M20.11,8l2.89,-5l-22,0l2.89,5z"/>
       
